tests/context_unknown_with_field_bad.stderr
tests/context_unknown_with_field_bad.hop:10:16: error: HOP1004: unexpected token
